# Tech-Challenge-2

./: .dockerignore  .env.example  .env.exemple  .gitignore  42  Dockerfile  README.md  docker-compose.yml  dvc.yaml  evaluate_models.py  outro_teste.py  params.yaml  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt  test_models.py  test_neural.py
.dvc/: config
docs/: MODEL_CARD.md
notebook/: category.ipynb  events.ipynb  item_part1.ipynb  item_part2.ipynb
scripts/: validate_env.py
src/: __init__.py  config.py
src/api/: __init__.py  app.py
src/feature/: __init__.py  asof_join.py  encoders.py  kcore.py  run.py  temporal_split.py
src/models/: als_recommender.py  bpr_mf_recommender.py  factory.py  item_knn_recommender.py  popularity_recommender.py
src/models/baseline/: __init__.py  als_recommender.py  base.py  bpr_mf_recommender.py  factory.py  item_knn_recommender.py  logistic_recommender.py  metrics.py  popularity_recommender.py  svd_recommender.py
src/models/neural/: __init__.py  dataset.py  factory.py  mlp.py  recommender.py  trainer.py
src/preprocessing/: __init__.py  base.py  categories.py  events.py  factory.py  item_properties.py  run.py  utils.py
src/train/: run.py
src/utils/: __init__.py  seed.py  sparse_utils.py  utils.py
tests/: __init__.py  test_api.py  test_baseline_recommenders.py  test_encoders.py  test_factories.py  test_kcore.py  test_metrics.py  test_neural_components.py  test_temporal_split.py
