[project]
name = "tech-challenge-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Leticia Malato",email = "leticiamalato3@gmail.com"},
    {name = "Rafael Maranhão",email = "maranhaopara22@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "pandas (<3)",
    "numpy (<2.5)",
    "mlflow (>=2.14,<3.0)",
    "torch (>=2.3,<3.0)",
    "scikit-learn (>=1.5,<2.0)",
    "dvc (>=3.51,<4.0)",
    "pydantic (>=2.7,<3.0)",
    "pydantic-settings (>=2.3,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.18,<0.16.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["notebook", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "D", "ANN"]
ignore = ["D203", "D213"]  # incompatibilidades comuns entre regras de docstring

[tool.ruff.lint.pydocstyle]
convention = "google"  # força o estilo Google que o desafio exige

[tool.ruff.format]
quote-style = "double"